windows chrome overflow fix

--- a/css/bannerly-prototype-a.webflow.css
+++ b/css/bannerly-prototype-a.webflow.css
@@ -224,29 +224,6 @@ label {
     font-size: 20px;
 }
 
-.container-100vw {
-    position: relative;
-    z-index: 2;
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    width: 100vw;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -webkit-flex-direction: column;
-    -ms-flex-direction: column;
-    flex-direction: column;
-    -webkit-box-pack: start;
-    -webkit-justify-content: flex-start;
-    -ms-flex-pack: start;
-    justify-content: flex-start;
-    -webkit-box-align: center;
-    -webkit-align-items: center;
-    -ms-flex-align: center;
-    align-items: center;
-}
-
 .form {
     height: 100%;
     margin-right: auto;
@@ -531,7 +508,7 @@ label {
 }
 
 .a-button.as-list.drop-div {
-    width: 516px;
+    width: 518px;
     height: 24px;
     margin-top: 12px;
     margin-bottom: 4px;
@@ -1152,6 +1129,16 @@ label {
     width: 100vw;
     padding-top: 116px;
     padding-bottom: 30vh;
+    max-width: 100vw;
+    overflow-x: hidden;
+}
+
+.w-form {
+    width: auto;
+    overflow: hidden;
+    padding: 0px;
+    margin: 0px;
+    text-align: center;
 }
 
 ._20px-500 {
@@ -1187,7 +1174,9 @@ label {
     display: -ms-flexbox;
     display: flex;
     overflow: hidden;
-    width: 100%;
+    width:100vw;
+    max-width: 100vw;
+    overflow-x: hidden;    
     max-height: 100vh;
     min-height: 100vh;
     margin-right: auto;
@@ -1272,13 +1261,38 @@ label {
 }
 
 .section.swiping-area {
-    max-height: none;
+    width: 100vw;
+    max-width: 100vw;
+    height: 544px;
+    max-height: 544px;
     min-height: auto;
     margin-right: 0px;
     margin-bottom: 56px;
     margin-left: 0px;
     padding-right: 0px;
     padding-left: 0px;
+    padding-top: 48px;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    position: relative;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-align: center;
+    -webkit-align-items: flex-start;
+    -ms-flex-align: center;
+    align-items: flex-start;
+    -webkit-box-pack: start;
+    -webkit-justify-content: flex-start;
+    -ms-flex-pack: start;
+    justify-content: flex-start;
+
 }
 
 .bg-whitesmoke {
@@ -1500,7 +1514,22 @@ label {
     font-size: 14px;
     line-height: 20px;
     font-weight: 700;
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
 }
+
+.body::-webkit-scrollbar {
+    display: none; /* Hide scrollbar for Chrome, Safari and Opera */
+  }
+
+div {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+}
+
+div::-webkit-scrollbar {
+    display: none; /* Hide scrollbar for Chrome, Safari and Opera */
+  }
 
 .body.for-input {
     background-color: #e5e5e5;
@@ -3934,41 +3963,6 @@ label {
 
 .float-left {
     float: left;
-}
-
-.swiping-area {
-    position: relative;
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    overflow-y: scroll;
-    width: 100vw;
-    height: 544px;
-    margin-bottom: 28px;
-    padding-top: 48px;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -webkit-flex-direction: column;
-    -ms-flex-direction: column;
-    flex-direction: column;
-    -webkit-box-align: center;
-    -webkit-align-items: center;
-    -ms-flex-align: center;
-    align-items: center;
-}
-
-.swiping-area.section {
-    max-height: none;
-    min-height: auto;
-    margin-right: 0px;
-    margin-left: 0px;
-    padding-right: 0px;
-    padding-left: 0px;
-    -webkit-box-pack: start;
-    -webkit-justify-content: flex-start;
-    -ms-flex-pack: start;
-    justify-content: flex-start;
 }
 
 .greyer-back {
